# kungfu

./: .!62317!DESIGN.md  .gitignore  AGENT_NATIVE_LANGUAGE.md  ANL_THOUGHT_EXPERIMENT.md  BRAINSTORMING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  GAP_ANALYSIS.md  GEMINI.md  INDEX.md  README.md  THE_EVOLUTION_PRESENTATION.md  THE_LAST_SEMICOLON.md  WHITEPAPER.md  build_slides.py  go.sum
.kungfu/: config.yaml  identity.key  snapshot.loro
src/: main.rs
src/cli/: init.rs  mod.rs  seed.rs  transcribe.rs
src/core/: config.rs  dojo.rs  history.rs  identity.rs  mod.rs  seed.rs  vfs.rs
src/mcp/: mod.rs  server.rs  tools.rs
src/pkg/: mod.rs
src/pkg/id/: mod.rs
src/sync/: mod.rs  osmosis.rs
