[package]
name = "kungfu"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
bincode = "2.0.0-rc.3"
clap = { version = "4.6.1", features = ["derive"] }
ed25519-dalek = "2.2.0"
hex = "0.4.3"
loro = "1.12.0"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.10", features = ["fs", "cors"] }
uuid = { version = "1.23.1", features = ["v7"] }
