[package]
name = "kungfu"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
ed25519-dalek = "2.2.0"
futures-util = "0.3.32"
hex = "0.4.3"
loro = "1.12.0"
loro-internal = "1.12.0"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = "0.29.0"
tower-http = { version = "0.6.10", features = ["fs", "cors"] }
url = "2.5.8"
uuid = { version = "1.23.1", features = ["v7"] }
walkdir = "2.5.0"
